<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp" >

        <TextView
            android:id="@+id/imzhouseNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/childName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imzhouseNumber"
            android:text="@string/child_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/imz_child_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/childName"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/motherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imz_child_name"
            android:text="@string/mother_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/imz_mother_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/motherName"
            android:ems="10" />

        <TextView
            android:id="@+id/fatherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imz_mother_name"
            android:text="@string/father_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/imz_father_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fatherName"
            android:ems="10" />

        <LinearLayout
            android:id="@+id/childsexContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imz_father_name"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/listwomanName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/imz_sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/childsex" />

        </LinearLayout>

        <TextView
            android:id="@+id/date_ofBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/childsexContainer"
            android:text="@string/dob"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/imz_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_ofBirth"
            android:text="28-08-2014" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/imz_dob" >

            <Button
                android:id="@+id/pr_lmc_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/imz_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
