<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pregnancy" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp" >

        <TextView
            android:id="@+id/pr_house_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hous_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/womenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pr_house_number"
            android:text="@string/women_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pr_women_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/womenName"
            android:ems="10"
            android:hint="@string/women_name" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/husbandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pr_women_name"
            android:text="@string/husband_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/pr_husband_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/husbandName"
            android:ems="10"
            android:hint="@string/husband_name" />

        <LinearLayout
            android:id="@+id/husbandContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pr_husband_name"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/womenAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/pr_women_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/familymemb" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/childContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/husbandContainer"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/numChild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_child"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/pr_num_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/familymemb" />
        </LinearLayout>

        <TextView
            android:id="@+id/lmcDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/childContainer"
            android:layout_weight="1"
            android:text="@string/lmc_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_below="@id/lmcDate"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lmc_date"
                android:id="@+id/textView4" />

            <Button
                android:id="@+id/pr_lmc_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_layout"
                android:text="25-08-2014"
                />
            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/date_layout"
            android:layout_marginBottom="18dp" >

            <Button
                android:id="@+id/pr_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/pr_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
